# lore

./: AGENTS.md  CONDUCTOR.md  Cargo.toml  LICENSE  README.md  SKILLS.md  WEB.md  install.sh
EXAMPLE/: CLAUDE.md
EXAMPLE/lore/: CHANGELOG.md  CONTEXT.md  GUARDRAILS.md  INDEX.md  MISSION.md  OG.md
EXAMPLE/lore/architecture/: apis.md  models.md  overview.md
EXAMPLE/lore/bullpen/agy/: identity.md
EXAMPLE/lore/bullpen/claude-code/: identity.md  skills.md
EXAMPLE/lore/bullpen/codex/: identity.md  instructions.md
EXAMPLE/lore/bullpen/conductor/: identity.md
EXAMPLE/lore/bullpen/gemini/: identity.md  tools.md
EXAMPLE/lore/bullpen/jerry/: identity.md
EXAMPLE/lore/decisions/: payment-v2-architecture.md
EXAMPLE/lore/features/: payment-instruments.md
EXAMPLE/lore/kanban/: backlog.md  done.md  inprogress.md  todo.md
EXAMPLE/lore/skills/: skills.yml
EXAMPLE/lore/testing/: registry.md
hooks/: post-commit.sh
scripts/: Cargo.toml  lore
scripts/lore-cli/: Cargo.toml
scripts/src/: main.rs
skills/larn/: SKILL.md
skills/lere/: SKILL.md
skills/limn/: SKILL.md
skills/lore/: SKILL.md
src/: commands.rs  dashboard.html  dashboard.rs  main.rs  models.rs
